--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body {
   flex: 1 1 auto;
 }
 [class*="__container"] {
-  max-width: 1057px;
+  max-width: 1087px;
   margin: 0px auto;
   padding: 0 15px;
 }
@@ -64,12 +64,23 @@ body {
     max-width: 970px;
   }
 }
-@media (max-width: 1087px) {
+/*   tablet */
+@media (max-width: 991.98px) {
   [class*="__container"] {
     max-width: 750px;
   }
 }
+/*   MOBILE */
+@media (max-width: 767.98px) {
+  [class*="__container"] {
+    max-width: none;
+  }
+}
 
+/* MOBILE SMALL*/
+@media(max-width:479.98px){
+
+}
 .header__container {
   display: flex;
 
@@ -85,6 +96,8 @@ body {
 }
 
 .header__logo {
+  position: relative;
+  z-index:5 ;
 }
 .header__menu {
   flex: 1 1 auto;
@@ -93,38 +106,116 @@ body {
 .menu {
   display: flex;
   justify-content: flex-end;
-  padding: 0 40px 0 0;
+  
 }
 
 .menu__list {
   display: flex;
+  
 }
 
 .menu__item {
   margin: 0 40px 0 0;
 }
+
+
+
+.menu__item:last-child{
+  /* margin-right:0; */
+}
 .menu__link {
   font-family: Raleway;
   text-transform: uppercase;
-
   font-size: 10px;
-
   font-weight: 700;
   line-height: 1.2;
   color: #000000;
   letter-spacing: 1px;
 }
+
+
+.menu__link:hover{
+  text-decoration: underline;
+}
 .header__button {
+  position: relative;
+  z-index: 5;
   display: flex;
   justify-content: flex-end;
   flex: 0 0 252px;
+  align-items:center
+}
+
+@media (max-width: 991.98px) {
+  .header__container {
+    min-height: 80px;
+  }
+  .header__button{
+  flex: 0 0 170px;
+}
+.menu__item {
+  margin: 0 30px 0 0;
+
+}
+}  
+@media(max-width:767.98px) {
+  .menu__body{
+    position: fixed;
+    top: 0;
+    left:-100%;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    padding: 90px 15px 30px 15px;
+    transition: left 0.3s ease 0s;
+  }
+  .header:target .menu__body{
+    left: 0;
+  }
+  .header:target .menu__body::before{
+    content:"";
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 80px;
+    width: 100%;
+    background-color:#fff;
+
+  }
+  .menu__list{
+    flex-direction: column;
+  justify-content: center;
+  align-items:center
+  }
+.menu__item{
+  margin: 0 0 25px 0;
+}
+.menu__item:last-child{
+  margin-bottom: 0;
+}
+  .menu__link{
+    /* color:#fff; */
+    font-size: 20px;
+  }
+  .header__button .button{
+    padding: 14px 20px;
+
+}
+}
+@media(max-width:479.98px){
+  .header__logo{
+    flex:  0 0 40px;
+    overflow: hidden;
+  }
+
 }
 .button {
   display: inline-block;
   font-family: Raleway;
   font-weight: 800;
   font-size: 10px;
-  line-height: 12px;
+  line-height: 1.2;
   letter-spacing: 1px;
   text-transform: uppercase;
   color: #fcfdfe;
@@ -141,6 +232,76 @@ body {
 }
 .button_blue:hover {
   background-color: #70a3f7;
+}
+/*--------------*/
+.close-icon-menu,
+.icon-menu{
+  display: none;
+}
+@media(max-width:767.98px){
+ 
+  .icon-menu{
+position:relative;
+flex: 0 0 30px;
+height: 18px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+margin: 0 0 0 20px;
+}
+
+
+.icon-menu:before,
+.icon-menu::after{
+  content:"";
+  background-color:#000;
+  height: 2px;
+
+  
+
+}
+
+.icon-menu span{
+  background-color:#000;
+  height: 2px;
+}
+
+.close-icon-menu{
+  flex: 0 0 30px;
+  height: 30px;
+  position: relative;
+  margin:0 0 0 20px ;
+}
+
+.close-icon-menu::before,
+.close-icon-menu::after{
+  content:"";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  background-color:#000;
+  height: 2px;
+  
+  
+}
+
+.close-icon-menu::before{
+  transform: rotate(45deg);
+}
+
+.close-icon-menu::after{
+  transform: rotate(-45deg);
+}
+.header:target .icon-menu{
+  display: none;
+}
+.header:target .close-icon-menu{
+  display:flex
+}
+
+
+
 }
 .main {
 }
