--- a/css/style.css
+++ b/css/style.css
@@ -1,309 +1,497 @@
-/* обнуление */
+/* Обнуление */
 *,
 *::before,
 *::after {
-  padding: 0;
-  margin: 0;
-  border: 0;
-
-  box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	border: 0;
+	box-sizing: border-box;
 }
-
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 ul,
 ol,
 li {
-  list-style: none;
+	list-style: none;
 }
 img {
-  vertical-align: top;
+	vertical-align: top;
 }
-
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-weight: inherit;
-  font-size: inherit;
+	font-weight: inherit;
+	font-size: inherit;
 }
-
 html,
 body {
-  height: 100%;
-  line-height: 1;
+	height: 100%;
+	line-height: 1;
 }
-
 body {
-  font-family: Rubik;
-  font-size: 12px;
-  color: #616161;
+	font-family: Montserrat;
+	font-size: 12px;
+	color: #616161;
 }
-
+/* ------------------ */
 .wrapper {
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
 }
-
+/* ------------------ */
 .main {
-  flex: 1 1 auto;
+	flex: 1 1 auto;
 }
+
 [class*="__container"] {
-  max-width: 1087px;
-  margin: 0px auto;
-  padding: 0 15px;
+	max-width: 1087px;
+	margin: 0px auto;
+	padding: 0px 15px;
 }
-/*pC */
+
+/* PC */
 @media (max-width: 1087px) {
-  [class*="__container"] {
-    max-width: 970px;
-  }
+	[class*="__container"] {
+		max-width: 970px;
+	}
 }
-/*   tablet */
+/* TABLET */
 @media (max-width: 991.98px) {
-  [class*="__container"] {
-    max-width: 750px;
-  }
+	[class*="__container"] {
+		max-width: 750px;
+	}
 }
-/*   MOBILE */
+/* MOBILE */
 @media (max-width: 767.98px) {
-  [class*="__container"] {
-    max-width: none;
-  }
+	[class*="__container"] {
+		max-width: none;
+	}
+}
+/* MOBILE SMALL */
+@media (max-width: 479.98px) {
 }
 
-/* MOBILE SMALL*/
-@media(max-width:479.98px){
-
+.header {
+	position: absolute;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: 50;
 }
 .header__container {
-  display: flex;
-
-  min-height: 114px;
-  align-items: center;
+	display: flex;
+	min-height: 114px;
+	align-items: center;
 }
-.header {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 50;
-}
-
 .header__logo {
-  position: relative;
-  z-index:5 ;
+	position: relative;
+	z-index: 5;
 }
 .header__menu {
-  flex: 1 1 auto;
-}
-
-.menu {
-  display: flex;
-  justify-content: flex-end;
-  
-}
-
-.menu__list {
-  display: flex;
-  
-}
-
-.menu__item {
-  margin: 0 40px 0 0;
-}
-
-
-
-.menu__item:last-child{
-  /* margin-right:0; */
-}
-.menu__link {
-  font-family: Raleway;
-  text-transform: uppercase;
-  font-size: 10px;
-  font-weight: 700;
-  line-height: 1.2;
-  color: #000000;
-  letter-spacing: 1px;
-}
-
-
-.menu__link:hover{
-  text-decoration: underline;
+	flex: 1 1 auto;
 }
 .header__button {
-  position: relative;
-  z-index: 5;
-  display: flex;
-  justify-content: flex-end;
-  flex: 0 0 252px;
-  align-items:center
+	position: relative;
+	z-index: 5;
+	flex: 0 0 252px;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+/* --------------------------- */
+.menu {
+	display: flex;
+	justify-content: flex-end;
+}
+.menu__list {
+	display: flex;
+}
+.menu__item {
+	margin: 0px 40px 0px 0px;
+}
+.menu__link {
+	font-family: Raleway;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 10px;
+	line-height: 1.2;
+	color: #000;
+	letter-spacing: 1px;
+}
+.menu__link:hover {
+	text-decoration: underline;
 }
 
 @media (max-width: 991.98px) {
-  .header__container {
-    min-height: 80px;
-  }
-  .header__button{
-  flex: 0 0 170px;
+	.header__container {
+		min-height: 80px;
+	}
+	.header__button {
+		flex: 0 0 170px;
+	}
+	.menu__item {
+		margin: 0px 30px 0px 0px;
+	}
 }
-.menu__item {
-  margin: 0 30px 0 0;
-
+@media (max-width: 767.98px) {
+	.menu__body {
+		position: fixed;
+		top: 0;
+		left: -100%;
+		width: 100%;
+		height: 100%;
+		overflow: auto;
+		background-color: #fff;
+		padding: 90px 15px 30px 15px;
+		transition: left 0.3s ease 0s;
+	}
+	.header:target .menu__body {
+		left: 0;
+	}
+	.header:target .menu__body:before {
+		content: "";
+		position: fixed;
+		top: 0;
+		left: 0;
+		height: 80px;
+		width: 100%;
+		background-color: #fff;
+	}
+	.menu__list {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	.menu__item {
+		margin: 0px 0px 25px 0px;
+	}
+	.menu__item:last-child {
+		margin-bottom: 0;
+	}
+	.menu__link {
+		/* color: #fff; */
+		font-size: 20px;
+	}
 }
-}  
-@media(max-width:767.98px) {
-  .menu__body{
-    position: fixed;
-    top: 0;
-    left:-100%;
-    overflow: auto;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    padding: 90px 15px 30px 15px;
-    transition: left 0.3s ease 0s;
-  }
-  .header:target .menu__body{
-    left: 0;
-  }
-  .header:target .menu__body::before{
-    content:"";
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 80px;
-    width: 100%;
-    background-color:#fff;
-
-  }
-  .menu__list{
-    flex-direction: column;
-  justify-content: center;
-  align-items:center
-  }
-.menu__item{
-  margin: 0 0 25px 0;
+@media (max-width: 479.98px) {
+	.header__logo {
+		flex: 0 0 40px;
+		overflow: hidden;
+	}
 }
-.menu__item:last-child{
-  margin-bottom: 0;
-}
-  .menu__link{
-    /* color:#fff; */
-    font-size: 20px;
-  }
-  .header__button .button{
-    padding: 14px 20px;
-
-}
-}
-@media(max-width:479.98px){
-  .header__logo{
-    flex:  0 0 40px;
-    overflow: hidden;
-  }
-
-}
+/* --------------------------- */
 .button {
-  display: inline-block;
-  font-family: Raleway;
-  font-weight: 800;
-  font-size: 10px;
-  line-height: 1.2;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  color: #fcfdfe;
-  padding: 14px 30px;
-  border-radius: 5px;
-  background-color: #ec5863;
-  transition: background-color 0.3s ease 0s;
+	display: inline-block;
+	font-family: Raleway;
+	text-transform: uppercase;
+	font-weight: 800;
+	font-size: 10px;
+	line-height: 1.2;
+	letter-spacing: 1px;
+	color: #fcfdfe;
+	padding: 14px 30px;
+	border-radius: 5px;
+	background-color: #ec5863;
+	transition: background-color 0.3s ease 0s;
 }
 .button:hover {
-  background-color: #f37a82;
+	background-color: #f37a82;
 }
 .button_blue {
-  background-color: #4285f4;
+	background-color: #4285f4;
 }
 .button_blue:hover {
-  background-color: #70a3f7;
+	background-color: #70a3f7;
 }
-/*--------------*/
+/* --------------------------- */
 .close-icon-menu,
-.icon-menu{
-  display: none;
+.icon-menu {
+	display: none;
 }
-@media(max-width:767.98px){
- 
-  .icon-menu{
-position:relative;
-flex: 0 0 30px;
-height: 18px;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-margin: 0 0 0 20px;
-}
+@media (max-width: 767.98px) {
+	.icon-menu {
+		display: flex;
+		position: relative;
+		flex: 0 0 30px;
+		height: 18px;
+		flex-direction: column;
+		justify-content: space-between;
+		margin: 0px 0px 0px 20px;
+	}
+	.icon-menu::before,
+	.icon-menu::after {
+		content: "";
+		background-color: #000;
+		height: 2px;
+	}
+	.icon-menu span {
+		height: 2px;
+		background-color: #000;
+	}
 
-
-.icon-menu:before,
-.icon-menu::after{
-  content:"";
-  background-color:#000;
-  height: 2px;
-
-  
-
-}
-
-.icon-menu span{
-  background-color:#000;
-  height: 2px;
-}
-
-.close-icon-menu{
-  flex: 0 0 30px;
-  height: 30px;
-  position: relative;
-  margin:0 0 0 20px ;
-}
-
-.close-icon-menu::before,
-.close-icon-menu::after{
-  content:"";
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  background-color:#000;
-  height: 2px;
-  
-  
-}
-
-.close-icon-menu::before{
-  transform: rotate(45deg);
-}
-
-.close-icon-menu::after{
-  transform: rotate(-45deg);
-}
-.header:target .icon-menu{
-  display: none;
-}
-.header:target .close-icon-menu{
-  display:flex
+	.close-icon-menu {
+		flex: 0 0 30px;
+		height: 30px;
+		position: relative;
+		margin: 0px 0px 0px 20px;
+	}
+	.close-icon-menu::before,
+	.close-icon-menu::after {
+		content: "";
+		position: absolute;
+		top: 50%;
+		left: 0;
+		width: 100%;
+		background-color: #000;
+		height: 2px;
+	}
+	.close-icon-menu::before {
+		transform: rotate(45deg);
+	}
+	.close-icon-menu::after {
+		transform: rotate(-45deg);
+	}
+	.header:target .icon-menu {
+		display: none;
+	}
+	.header:target .close-icon-menu {
+		display: flex;
+	}
 }
 
+/* ============================================================================= */
+.block-text {
+}
+.block-text_center {
+	text-align: center;
+}
+.block-text__title {
+	font-weight: 700;
+	font-size: 44px;
+	line-height: 126%;
+	color: #000;
+}
+.block-text__title:not(:last-child) {
+	margin: 0px 0px 12px 0px;
+}
+.block-text__title span {
+	color: #ec5863;
+}
+.block-text__title_blue span {
+	color: #4285f4;
+}
+.block-text__text {
+	line-height: 138.5%;
+}
+.block-text__text_mw {
+	max-width: 620px;
+	margin: 0px auto;
+}
+.block-text__text:not(:last-child) {
+	margin: 0px 0px 24px 0px;
+}
+.block-text__button {
+}
+@media (max-width: 767.98px) {
+	.block-text__title {
+		font-size: 34px;
+	}
+}
+/* ============================================================================= */
+
+.get-started {
+	background-color: #fafbfd;
+}
+.get-started__container {
+	padding: 150px 15px 50px 15px;
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	position: relative;
+}
+.get-started__container::before {
+	content: "";
+	position: absolute;
+	width: 100vw;
+	height: 100%;
+	right: 267px;
+	top: 0;
+	transform: translate(100%, 0px);
+	border-radius: 30px 0px 0px 30px;
+	background-color: #ec5863;
+}
+.get-started__content {
+	flex: 0 1 48%;
+	padding: 0px 20px;
+}
+.get-started__block-text {
+	max-width: 410px;
+}
+.get-started__video {
+	flex: 1 1 100%;
+	padding: 60px 0px 0px 20px;
+}
+.get-started__image {
+	flex: 0 1 52%;
+	position: relative;
+	z-index: 2;
+}
+.get-started__image img {
+	max-width: 100%;
+}
+
+.video-get-started {
+	display: inline-flex;
+	align-items: center;
+}
+.video-get-started__icon {
+	flex: 0 0 44px;
+}
+.video-get-started__body {
+	padding: 0px 0px 0px 12px;
+}
+.video-get-started__title {
+	color: #b0b0b0;
+	font-size: 13px;
+	line-height: 126%;
+	letter-spacing: 1.5px;
+}
+.video-get-started__title:not(:last-child) {
+	margin: 0px 0px 5px 0px;
+}
+.video-get-started__text {
+	text-transform: uppercase;
+	font-size: 9px;
+	color: #000;
+	line-height: 126%;
+	letter-spacing: 2px;
+}
+@media (max-width: 991.98px) {
+	.get-started__container::before {
+		right: 185px;
+		border-radius: 20px 0px 0px 20px;
+	}
+}
+@media (max-width: 767.98px) {
+	.get-started__container {
+		padding: 100px 15px 30px 15px;
+	}
+	.get-started__container::before {
+		display: none;
+	}
+	.get-started__block-text {
+		max-width: none;
+	}
+	.get-started__content {
+		flex: 1 1 100%;
+		padding: 0;
+	}
+	.get-started__image {
+		flex: 1 1 100%;
+		text-align: center;
+		padding: 30px 0;
+	}
+	.get-started__video {
+		padding: 0;
+	}
+}
+
+/* --------stay-safe------------------- */
+.stay-safe {
+	padding: 80px 0;
+}
+.stay-safe__container {
+	display: flex;
+	align-items: center;
+}
+.stay-safe__media {
+	flex: 0 1 50%;
+	
+}
+
+.stay-safe__content {
+	flex: 0 1 50%;
+}
+.stay-safe__block-text {
+}
+
+.media-stay-safe {
+	width: 373px;
+	padding: 56px 0px 27px 0px;
+	text-align: center;
+	position: relative;
+}
+.media-stay-safe__image {
+	display: inline-block;
+	box-shadow: 2px 4px 32px rgba(0, 0, 0, 0.12);
+	border-radius: 16px;
+	position: relative;
+	width: 61.5%;
+}
+.media-stay-safe__image img {
+	position: relative;
+	z-index: 5;
+	max-width: 100%;
+}
+.media-stay-safe__image::after {
+	content: "";
+	position: absolute;
+	bottom: -12px;
+	left: 12px;
+	width: 206px;
+	height: 27px;
+	z-index: 2;
+	background: rgba(240, 240, 240, 0.49);
+	border-radius: 16px;
+}
+.media-stay-safe__item {
+	position: absolute;
+	background-color: #ec5863;
+	border-radius: 30px;
+	width: 77px;
+	height: 77px;
+}
+.media-stay-safe__item_1 {
+	top: 0;
+	left: 0;
+	width: 147px;
+	height: 147px;
+}
+.media-stay-safe__item_2 {
+	bottom: 0;
+	left: 33px;
+}
+.media-stay-safe__item_3 {
+	bottom: 107px;
+	right: 34px;
+}
+
+@media (min-width:991.98px) {
+	.stay-safe__media{
+		padding: 0 0 0 47px;
+	}
+	
+}
+
+@media (max-width:767.98px){
+	.stay-safe__container{
+		flex-direction: column-reverse;
+	}
+	.stay-safe__content {
+	padding: 30px 0;
+	}
 
 
-}
-.main {
-}
-.footer {
+	.media-stay-safe {
+		width: 290px;
+		padding: 56px 0px 27px 0px;
+		text-align: center;
+		position: relative;
+	}
 }
